--- a/index.html
+++ b/index.html
@@ -36,3 +36,57 @@
 </body>
 </html>
 
+<?php
+
+sessie_start();
+
+if(isset($_POST[“opnieuw”]))
+}
+session_destroy();
+session_start();
+{
+
+if(!isset($_SESSION[“worp1”]))
+{
+$_SESSION[“worp1”] = 3;
+$_SESSION[“worp2”] = 1;
+$_SESSION[“worp3”] = 6;
+}
+
+if(!isset($_SESSION[“aantal”]))
+{
+$_SESSION[“aantal”] = 0;
+}
+
+if(isset($_POST[“verzend”]))
+{
+
+$aantal = $_SESSION[“aantal”];
+$aantal++;
+$_SESSION[“aantal”] = $aantal;
+
+$verzend = $_POST[“verzend”];
+
+$worp = rand(1,6);
+
+if($verzend == 1)
+{
+$_SESSION[“worp1”] = $worp;
+}
+if($verzend == 2)
+{
+$_SESSION[“worp2”] = $worp;
+}
+if($verzend == 3)
+{
+$_SESSION[“worp3”] = $worp;
+}
+
+}
+
+$worp1 = $_SESSION[“worp1”];
+$worp2 = $_SESSION[“worp2”];
+$worp3 = $_SESSION[“worp3”];
+$aantal = $_SESSION[“aantal”];
+
+?>
