--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <html lang=”en”>
 <head>
 <meta charset=”utf-8”>
-<link rel="shortcut icon"1467640298_package_games_board.ico"
+<link rel="shortcut icon" href="1467640298_package_games_board.ico"
 <title> Drie dobbelstenen</title>
 </head>
 <body>
