--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 <td>
 <form action = “werp3.php method=”post”>
 <input type=”hidden” name=”verzend” value=”1” />
-<input type= “image” src=”http://www.online-dobbelsteen.nl/img/1c.gif<?php echo”$worp1”; ?>.gif”
+<input type= “image” src=”dobbel<?php echo”$worp1”; ?>.gif”
 </form>
 </td>
 <td>
