--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
 <input type=”hidden” name=”verzend” value=”1” />
 
 
-<input type= “image” src=”http://www.onlinedobbelsteen.nl/img/dice3.png"<?php echo”$worp1”; ?>.gif”
+<input type= “image” src=”http://www.onlinedobbelsteen.nl/img/dice3.png"<?php echo”$worp1”; ?>
 
 
 </form>
@@ -55,7 +55,7 @@
 <input type=”hidden” name=”verzend” value=”2” />
 
 
-<input type= “image” src=”http://www.onlinedobbelsteen.nl/img/dice3.png"<?php echo”$worp2”; ?>.gif”
+<input type= “image” src=”http://www.onlinedobbelsteen.nl/img/dice3.png"<?php echo”$worp2”; ?>
 
 
 </form>
@@ -73,7 +73,7 @@
 <input type=”hidden” name=”verzend” value=”3” />
 
 
-<input type= “image” src=”http://www.onlinedobbelsteen.nl/img/dice3.png"<?php echo”$worp3”; ?>.gif”
+<input type= “image” src=”http://www.onlinedobbelsteen.nl/img/dice3.png"<?php echo”$worp3”; ?>
 
 
 </form>
