--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
 <input type=”hidden” name=”verzend” value=”1” />
 
 
-<input type= “image” src=”http://www.onlinedobbelsteen.nl/img/dice3.png"<?php echo”$worp1”; ?>
+<img class="diceimg" width="150" height="150" src="/img/dice5.png" alt="Online dobbelsteen: 5" style="display: inline;">
 
 
 </form>
