--- a/index.html
+++ b/index.html
@@ -31,13 +31,19 @@
 <td>
 
 
-<form action = “werp3.php method=”post”>
+
+<br /><br />
 
 
-<input type=”hidden” name=”verzend” value=”1” />
+<br /><br />
 
 
-<input type= “image” src=”http://www.onlinedobbelsteen.nl/img/dice3.png"><?php echo”$worp2”; ?>
+<form action=”werp3.php” method=”post”>
+
+
+<input type=”submit” name=”opnieuw” value=”Begin opnieuw” />
+
+
 
 
 </form>
