--- a/index.html
+++ b/index.html
@@ -1,66 +1,19 @@
-
 <!DOCTYPE html>
-
-
-
-
-<html lang=”en”>
-
-
-<head>
-
-
-<meta charset=”utf-8”>
-
-
-<title> Drie dobbelstenen</title>
-
-
-</head>
-
-
+<html>
 <body>
 
+<p id="demo">Click the button to change the layout of this paragraph</p>
 
-<table>
+<script>
+function myFunction() {
+    var x = document.getElementById("demo");
+    x.style.fontSize = "25px";
+    x.style.color = "red";
+}
+</script>
 
-
-<tr>
-
-
-<td>
-
-
-
-<br /><br />
-
-
-<br /><br />
-
-
-<form action=”werp3.php” method=”post”>
-
-
-<input type=”submit” name=”opnieuw” value=”Begin opnieuw” />
-
-
-
-
-</form>
-
-</td>
-
-</tr>
-
-
-
-</table>
-
-
+<button onclick="myFunction()">Click Me!</button>
 
 </body>
-
-
 </html>
-
 
