--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <body>
 
-<p id="demo">Click the button to change the layout of this paragraph</p>
+<p id="demo">Begin opnieuw</p>
 
 <script>
 function myFunction() {
