--- a/index.html
+++ b/index.html
@@ -1,112 +1,40 @@
-
-<!DOCTYPE html>
-
-
-
-
-<html lang=”en”>
-
-
-<head>
-
-
-<meta charset=”utf-8”>
-
-
-<title> Drie dobbelstenen</title>
-
-
-</head>
-
-
-<body>
-
-
-<table>
-
-
-<tr>
-
-
-<td>
-
-
-<form action = “werp3.php method=”post”>
-
-
-<input type=”hidden” name=”verzend” value=”1” />
-
-
-<input type= “image” src=”dobbel<?php echo”$worp1”; ?>.gif”
-
-
+<form action = "dobbelsteen2.php" METHOD = "POST">
+<input type = "submit" name = "submit" value = "Gooi dobbelsteen">
 </form>
 
+<?
 
-</td>
-
-
-<td>
-
-
-<form action = “werp3.php method=”post”>
-
-
-<input type=”hidden” name=”verzend” value=”2” />
-
-
-<input type= “image” src=”dobbel<?php echo”$worp2”; ?>.gif”
-
-
-</form>
-
-
-</td>
-
-
-<td>
-
-
-<form action = “werp3.php method=”post”>
-
-
-<input type=”hidden” name=”verzend” value=”3” />
-
-
-<input type= “image” src=”dobbel<?php echo”$worp3”; ?>.gif”
+function toeval()
+{mt_srand(time()); 
+$resultaat=mt_rand(1,6);
+return $resultaat;
+}
+echo toeval();
+switch(toeval()) 
+{
+case 1: $plaat="1.gif";
+break;
+case 2: $plaat="2.gif";
+break;
+case 3: $plaat="3.gif";
+break;
+case 4: $plaat="4.gif";
+break;
+case 5: $plaat="5.gif";
+break;
+case 6: $plaat="6.gif";
+break;
+}
+echo "
+";
+echo "
+";
+echo "
+";
+echo "<img src='../phpfuncties/fotos/".$plaat."' height='50' width='50' ></img>";
 
 
-</form>
-
-
-</td>
-
-
-</tr>
-
-
-</table>
-
-
-<br /><br />
-
-
-<br /><br />
-
-
-<form action=”werp3.php” method=”post”>
-
-
-<input type=”submit” name=”opnieuw” value=”Begin opnieuw” />
-
-
-</form>
-
-
-</body>
-
-
-</html>
+?>
 
 
 
