--- a/index.html
+++ b/index.html
@@ -1,3 +1,5 @@
+<!DOCTYPE html>
+<body>
 <form action = "dobbelsteen2.php" METHOD = "POST">
 <input type = "submit" name = "submit" value = "Gooi dobbelsteen">
 </form>
@@ -35,6 +37,7 @@ echo "<img src='../phpfuncties/fotos/".$plaat."' height='50' width='50' ></img>"
 
 
 ?>
-
+</body>
+</html>
 
 
