--- a/index.html
+++ b/index.html
@@ -33,8 +33,7 @@ echo "
 ";
 echo "
 ";
-echo "<img src='../phpfuncties/fotos/".$plaat."' height='50' width='50' ></img>";
-?>
+echo "<img src='../phpfuncties/fotos/".$plaat."' height='50' width='50' ></img>";?>
 </body>
 </html>
 
