--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@ switch(toeval())
 {
 case 1: $plaat="1.gif";
 break;
-case 2: $https://upload.wikimedia.org/wikipedia/commons/thumb/5/5f/Dice-2-b.svg/1024px-Dice-2-b.svg.png="2.gif";
+case 2: <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/5/5f/Dice-2-b.svg/1024px-Dice-2-b.svg.png="2.gif"; />
 break;
 case 3: $plaat="3.gif";
 break;
