--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@ if(isset($_POST["verzend"]))
 $worp = rand(1,6); 
 
 // hier word afhankelijk van $worp een afbeelding getoond op het beeldscherm
-switch ($worp) {
+switch ($picture) {
  case "1":
   echo "<img src='http://www.online-dobbelsteen.nl/img/1c.gif' />";
   break;
