--- a/index.html
+++ b/index.html
@@ -10,27 +10,31 @@ switch ($worp) {
  case "1":
   echo "<img src='http://www.online-dobbelsteen.nl/img/1c.gif' />";
   break;
+ 
  case "2":
  echo "<img src='http://www.online-dobbelsteen.nl/img/2c.gif' />";
  break;
+ 
  case "3":
  echo "<img src='http://www.online-dobbelsteen.nl/img/3c.gif' />";
  break;
+ 
  case "4":
  echo "<img src='http://www.online-dobbelsteen.nl/img/4c.gif' />";
  break;
+ 
  case "5":
  echo "<img src='http://www.online-dobbelsteen.nl/img/5c.gif' />";
  break;
+ 
  case "6":
  echo "<img src='http://www.online-dobbelsteen.nl/img/6c.gif' />";
  break;
+
+}
 }
 
-else
-{
-echo"<img src='http://www.online-dobbelsteen.nl/img/3c.gif' />";
-}
+else { echo"<img src='http://www.online-dobbelsteen.nl/img/3c.gif' />"; }
 ?>
 <br />
 <form action="werp1.php" method="post">
